# chart_openformula

./: CMakeLists.txt
chart/: CMakeLists.txt  chart.py  chart_style.py  example.py  gantt_example.py  test_chart.py  test_chart_style.py
open_formula/: of_basics_op.py  of_class.py  of_logicals_op.py  of_maths.py  of_stats.py  of_syntax.py  of_utils.py  test_of_basics_op.py  test_of_logical.py  test_of_maths.py  test_of_stats.py  test_of_syntax.py
openformula/: CMakeLists.txt  __init__.py  example.py  maths.py  test.py  test_basics.py  test_logic.py  test_stats.py  test_syntax.py  utils.py
