INSTALL(FILES __init__.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_chart")
INSTALL(FILES chart.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_chart")
INSTALL(FILES chart_style.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_chart")
INSTALL(FILES templates/chart.otc DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_chart/templates")
