INSTALL(FILES __init__.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES of_basics_op.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES of_class.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES of_logicals_op.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES of_maths.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES of_stats.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES of_syntax.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES of_utils.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
