INSTALL(FILES __init__.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES basics_op.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES types.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES logical.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES maths.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES stats.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES syntax.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
INSTALL(FILES utils.py DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_VERSION}/lpod_formula")
